# taut

./: .drone.yml  LICENSE  Makefile  README.md  infinity  spc-luthor  stack.yaml  taut.cabal
src/: Taut.hs
src/Taut/: Client.hs  Constants.hs  Conv.hs  Examples.hs  Functions.hs  Prelude.hs
src/Taut/Client/: IO.hs
src/Taut/Prelude/: Extras.hs
src/Taut/Types/: AccessToken.hs  ApiAppId.hs  AvatarHash.hs  BotAccessToken.hs  BotEvent.hs  ChannelAggregate.hs  ChannelDetail.hs  ChannelId.hs  ChannelName.hs  ChannelSet.hs  EditInfo.hs  MessageEvent.hs  MessageEvents.hs  MessageType.hs  Reaction.hs  RealName.hs  RealNameNormalized.hs  SubType.hs  TeamId.hs  Timestamp.hs  Title.hs  UrlText.hs  UserAccessToken.hs  UserAggregate.hs  UserDetail.hs  UserId.hs  UserName.hs  UserSet.hs
src/Taut/Types/Channel/: Purpose.hs  Topic.hs
src/Taut/Types/User/: Profile.hs
staging/Taut/Types/: ButtonPayload.hs  Message.hs  OauthToken.hs  TeamName.hs
staging/Taut/Types/Message/: Attachment.hs
staging/Taut/Types/Message/Attachment/: Action.hs  Field.hs
staging/Taut/Types/Message/Attachment/Action/: Confirm.hs
test/Taut/: FunctionsSpec.hs
test/Taut/Types/: AccessTokenSpec.hs  BotAccessTokenSpec.hs  ButtonPayloadSpec.hs  ChannelIdSpec.hs  ChannelNameSpec.hs  EditInfoSpec.hs  MessageEventSpec.hs  MessageEventsSpec.hs  MessageSpec.hs  MessageTypeSpec.hs  OauthTokenSpec.hs  ReactionSpec.hs  SubTypeSpec.hs  TeamIdSpec.hs  TeamNameSpec.hs  TimestampSpec.hs  UserAccessTokenSpec.hs  UserIdSpec.hs  UserNameSpec.hs
test/Taut/Types/ButtonPayload/: Arbitrary.hs
test/Taut/Types/Message/: Arbitrary.hs
test/Taut/Types/Message/Attachment/: Arbitrary.hs
test/Taut/Types/Message/Attachment/Action/: Arbitrary.hs
test/Taut/Types/Message/Attachment/Action/Confirm/: Arbitrary.hs
test/Taut/Types/Message/Attachment/Field/: Arbitrary.hs
