name:                taut
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/superpowerscorp/taut#readme
license:             BSD3
license-file:        LICENSE
author:              Superpowers Corp
maintainer:          ops@superpowerscorp.com
copyright:           2017 Superpowers Corp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Taut
                     , Taut.Types.ChannelId
                     , Taut.Types.EditInfo
                     , Taut.Types.MessageEvent
                     , Taut.Types.MessageType
                     , Taut.Types.Reaction
                     , Taut.Types.SubType
                     , Taut.Types.Timestamp
                     , Taut.Types.UserId
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , template-haskell
                     , text
                     , time
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite taut-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lens
                     , taut
                     , template-haskell
                     , text
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/superpowerscorp/taut
