name:                taut
version:             0.1.0.0
synopsis:            Slack but tighter.
description:         You got taut.
homepage:            https://github.com/superpowerscorp/taut#readme
license:             BSD3
license-file:        LICENSE
author:              Superpowers Corp
maintainer:          ops@superpowerscorp.com
copyright:           2017 Superpowers Corp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Taut
                     , Taut.Examples
                     , Taut.Functions
                     , Taut.Types.ChannelId
                     , Taut.Types.ChannelName
                     , Taut.Types.EditInfo
                     , Taut.Types.MessageEvent
                     , Taut.Types.MessageEvents
                     , Taut.Types.MessageType
                     , Taut.Types.Reaction
                     , Taut.Types.SubType
                     , Taut.Types.Timestamp
                     , Taut.Types.UserId
                     , Taut.Types.UserName
  build-depends:       aeson
                     , base                       >= 4.7 && < 5
                     , cassava
                     , containers
                     , derive
                     , infinity
                     , lens
                     -- We need to depend on QuickCheck here if we want to
                     -- export arbitrary instances (which we do).
                     , QuickCheck
                     , quickcheck-instances
                     , spc-luthor
                     , template-haskell
                     , text
                     , time
                     , unix
                     , vector
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite taut-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Taut.FunctionsSpec
                     , Taut.Types.TimestampSpec
  build-depends:       aeson
                     , base
                     , cassava
                     , containers
                     , derive
                     , infinity
                     , lens
                     , QuickCheck
                     , quickcheck-instances
                     , spc-luthor
                     , taut
                     , template-haskell
                     , text
                     , time
                     , unix
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/superpowerscorp/taut
