name:                taut
version:             0.1.0.0
synopsis:            Slack but tighter.
description:         You got taut.
homepage:            https://github.com/superpowerscorp/taut#readme
license:             BSD3
license-file:        LICENSE
author:              Superpowers Corp
maintainer:          ops@superpowerscorp.com
copyright:           2017 Superpowers Corp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , staging
  exposed-modules:     Taut
                     , Taut.Constants
                     , Taut.Examples
                     , Taut.Functions
                     , Taut.Prelude
                     , Taut.Prelude.Extras
                     , Taut.Types.AccessToken
                     , Taut.Types.BotAccessToken
                     , Taut.Types.ButtonPayload
                     , Taut.Types.ChannelId
                     , Taut.Types.ChannelName
                     , Taut.Types.EditInfo
                     , Taut.Types.Message
                     , Taut.Types.Message.Attachment
                     , Taut.Types.Message.Attachment.Action
                     , Taut.Types.Message.Attachment.Action.Confirm
                     , Taut.Types.Message.Attachment.Field
                     , Taut.Types.MessageEvent
                     , Taut.Types.MessageEvents
                     , Taut.Types.MessageType
                     , Taut.Types.OauthToken
                     , Taut.Types.Reaction
                     , Taut.Types.SubType
                     , Taut.Types.TeamId
                     , Taut.Types.TeamName
                     , Taut.Types.Timestamp
                     , Taut.Types.UserAccessToken
                     , Taut.Types.UserId
                     , Taut.Types.UserName
  build-depends:       aeson
                     , base       >= 4.7 && < 5
                     , bytestring
                     , cassava
                     , cereal
                     , cereal-text
                     , cereal-time
                     , containers
                     , data-default
                     , derive
                     , http-api-data
                     , lens
                     , protolude
                     -- We need to depend on QuickCheck here if we want to
                     -- export arbitrary instances (which we do).
                     , QuickCheck
                     , quickcheck-instances
                     , template-haskell
                     , text
                     , time
                     , vector
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite taut-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Taut.FunctionsSpec
                     , Taut.Types.AccessTokenSpec
                     , Taut.Types.BotAccessTokenSpec
                     , Taut.Types.ButtonPayloadSpec
                     , Taut.Types.ChannelIdSpec
                     , Taut.Types.ChannelNameSpec
                     , Taut.Types.EditInfoSpec
                     , Taut.Types.MessageEventSpec
                     , Taut.Types.MessageEventsSpec
                     , Taut.Types.MessageSpec
                     , Taut.Types.MessageTypeSpec
                     , Taut.Types.OauthTokenSpec
                     , Taut.Types.ReactionSpec
                     , Taut.Types.SubTypeSpec
                     , Taut.Types.TeamIdSpec
                     , Taut.Types.TeamNameSpec
                     , Taut.Types.TimestampSpec
                     , Taut.Types.UserAccessTokenSpec
                     , Taut.Types.UserIdSpec
                     , Taut.Types.UserNameSpec
  build-depends:       QuickCheck
                     , aeson
                     , aeson-pretty
                     , base
                     , containers
                     , data-default
                     , hspec
                     , protolude
                     , QuickCheck
                     , quickcheck-instances
                     , taut
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/superpowerscorp/taut
